# vin-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  test.cpp
bench/: CMakeLists.txt  allocator.cpp  allocator.h  main.cpp
data/: project.vin  text.txt  text.vasset  text2.txt  text2.vasset
data/icons/: default-folder.vasset  image-x-generic.vasset  text-x-generic.vasset  text-x-shader.vasset
data/mesh/: BoomBox.vasset  cube.vasset
data/shaders/: default.shader  default.vasset  examplefragment.frag  examplefragment.info.json  examplefragment.vasset  examplevertex.vasset  examplevertex.vert  fs.glsl
data/textures/: leafy_grass_diff_1k.vasset
editor/: CMakeLists.txt
editor/src/: assetimporter.h  big.h  editor.cpp  editor.h  editorfilewatcher.cpp  editorfilewatcher.h  exec.h  main.cpp  msgbox.h  project.cpp  project.h
editor/src/config/: editorconfig.cpp  editorconfig.h  editorimportsettings.cpp  editorimportsettings.h
editor/src/imgui/: fsocornutimgui.h  imguivin.cpp  imguivin.h  vsocornutimgui.h
editor/src/importer/: assetimporter.h  assetimportermanager.cpp  assetimportermanager.h  assetmesh.h  assetshader.h  assettext.h  assettexture.h  materialimporter.cpp  materialimporter.h  meshimporter.cpp  meshimporter.h  programimporter.cpp  programimporter.h  shaderimporter.cpp  shaderimporter.h  textureimporter.cpp  textureimporter.h
editor/src/inspector/: inspector.h  inspectorasset.cpp  inspectorasset.h  textureinspector.cpp  textureinspector.h
editor/src/project/: assetregistry.cpp  assetregistry.h  project.cpp  project.h
editor/src/windows/: console.cpp  console.h  contentbrowser.cpp  contentbrowser.h  inspector.cpp  inspector.h  preferences.cpp  preferences.h
include/: assert.hpp  component.hpp  core.hpp  ecs.hpp  engine.hpp  error.hpp  event.hpp  glrenderer.hpp  linit.hpp  logger.hpp  luainterface.hpp  lualib.hpp  psf.hpp  renderer.hpp  timer.hpp  vin.hpp  vincore.hpp  vinpch.hpp  window.hpp
include/events/: event.hpp
include/luaaa/: luaaa.hpp
shaderlibrary/: vin.glsl
src/: component.cpp  engine.cpp  entity.cpp  entrypoint.cpp  error.cpp  event.cpp  glrenderer.cpp  linit.cpp  logger.cpp  luainterface.cpp  lualib.cpp  main.cpp  msgbox.hpp  psf.cpp  vin.cpp  vin.hpp  vincore.cpp  vinpch.hpp  window.cpp
src/assets/: asset.cpp  asset.hpp  assetdatabase.cpp  assetdatabase.hpp  assetfile.cpp  assetfile.hpp  assetregistry.cpp  assetregistry.hpp  assetserdes.hpp
src/assets/serdes/: staticmesheserdes.hpp  textureserdes.hpp
src/core/: allocator.cpp  allocator.hpp  application.cpp  application.hpp  assert.hpp  asset.cpp  asset.hpp  base.hpp  container.hpp  core.hpp  entrypoint.cpp  event.cpp  event.hpp  identifiable.hpp  logger.cpp  logger.hpp  module.cpp  module.hpp  task.hpp  timer.cpp  timer.hpp  vinptr.cpp  vinptr.hpp  window.hpp
src/core/events/: applicationevent.hpp  event.cpp  event.hpp  inputevent.hpp
src/core/filesystem/: gamefilesystem.cpp  gamefilesystem.hpp
src/core/logger/: logger.cpp  logger.hpp  matrixfmt.hpp  vectorfmt.hpp
src/core/math/: math.hpp  mathhelper.hpp  matrix.hpp  matrix2x2.hpp  matrix2x3.hpp  matrix2x4.hpp  matrix3x2.hpp  matrix3x3.hpp  matrix3x4.hpp  matrix4x2.hpp  matrix4x3.hpp  matrix4x4.hpp  matrix_base.hpp  transform.hpp  vector.hpp  vector2.hpp  vector3.hpp  vector4.hpp  vector_base.hpp
src/core/resources/: image.hpp  resource.hpp  resourceloader.hpp  resourcemanager.hpp
src/ecs/: archetype.hpp  component.cpp  component.hpp  entity.cpp  entity.hpp  query.hpp  registry.hpp  system.hpp
src/events/: event.hpp
src/filesystem/: filesystem.hpp  gamefilesystem.cpp  gamefilesystem.hpp
src/filesystem/physfs/: gamefilesystem_physfs.cpp  gamefilesystem_physfs.hpp
src/inputsystem/: input.cpp  input.hpp
src/logger/: logger.cpp  logger.hpp  matrixfmt.hpp  quaternionfmt.hpp  vectorfmt.hpp
src/math/: math.hpp  matrix.hpp  matrix2x2.hpp  matrix2x3.hpp  matrix2x4.hpp  matrix3x2.hpp  matrix3x3.hpp  matrix3x4.hpp  matrix4x2.hpp  matrix4x3.hpp  matrix4x4.hpp  matrix_base.hpp  quaternion.hpp  transform.hpp  vector.hpp  vector2.hpp  vector3.hpp  vector4.hpp  vector_base.hpp
src/module/editor/: editorassetexplorer.cpp  editorassetexplorer.hpp  editordebugconsole.cpp  editordebugconsole.hpp  editormodule.cpp  editormodule.hpp  editorwindow.hpp
src/module/forwardrenderer/: forwardrenderer.cpp  forwardrenderer.hpp  forwardrenderercontext.cpp  forwardrenderercontext.hpp
src/module/rendering/: rendercontext.hpp  renderingmodule.cpp  renderingmodule.hpp  renderqueue.cpp  renderqueue.hpp  rendertask.cpp  rendertask.hpp
src/module/windowing/: windowmodule.cpp  windowmodule.hpp
src/opengl/: graphicscontext_opengl.cpp  graphicscontext_opengl.hpp
src/platform/opengl/: buffer_opengl.cpp  buffer_opengl.hpp  graphicscontext_opengl.cpp  program_opengl.cpp  (+7 more)
src/renderer/: bindable.hpp  buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  graphicscontext.cpp  graphicscontext.hpp  program.cpp  program.hpp  renderer.cpp  renderer.hpp  rendering.hpp  renderingapi.hpp  shader.hpp  texture.cpp  texture.hpp  vertexarray.cpp  vertexarray.hpp
src/renderpipeline/: rendercontext.hpp  renderpipeline.cpp  renderpipeline.hpp  renderqueue.hpp  rendertask.hpp  shadows.cpp  shadows.hpp
src/resources/: default.cpp  default.hpp  fallback.cpp  fallback.hpp  image.hpp  model.hpp  msblitfs.glsl  rawfile.hpp  resource.cpp  resource.hpp  resources.cpp  resources.hpp  vin.glsl  vinbase.glsl  vinpbr.glsl  vinshadowvs.glsl
src/scene/: basecomponents.hpp  camera.cpp  camera.hpp  light.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  meshrenderer.hpp  scene.hpp  transform.hpp
src/utils/: gltfutils.cpp  gltfutils.hpp  pakmaker.cpp  pakmaker.hpp  pathnormalizer.cpp  pathnormalizer.hpp  shaderutils.cpp  shaderutils.hpp  textureutils.hpp
src/vfs/: file.hpp  filesystem.hpp  vfs.hpp  virtualfilesystem.cpp  virtualfilesystem.hpp
test/: CMakeLists.txt  main.cpp  test.hpp
tools/: out.txt  swizzlecombgenerator.rb
tools/shadercompiler/: CMakeLists.txt  main.cpp
tools/shadercompiler/glslang/StandAlone/: CMakeLists.txt
(+38 files in other folders)
